After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 593079 - untranslated strings in errors
untranslated strings in errors
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
2.90.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2009-08-25 20:44 UTC by Christian Persch
Modified: 2013-05-30 15:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Localize strings in GtkFilesystem (1.35 KB, patch)
2009-09-01 15:02 UTC, Christian Dywan
none Details | Review
Localize error strings in GtkFilesystem (1.66 KB, patch)
2010-06-16 11:05 UTC, Christian Dywan
none Details | Review
Refactor-duplicate-set-error-code-and-localise-error-strings (3.95 KB, patch)
2013-05-28 08:02 UTC, Timothy Arceri
none Details | Review
Refactor-duplicate-set-error-code-and-localise-error-strings (2.65 KB, patch)
2013-05-28 09:18 UTC, Timothy Arceri
none Details | Review

Description Christian Persch 2009-08-25 20:44:52 UTC
In gtkfilesystem.c:

	  g_set_error (error,
		       GTK_FILE_CHOOSER_ERROR,
		       GTK_FILE_CHOOSER_ERROR_INCOMPLETE_HOSTNAME,
		       "Incomplete hostname");
	  g_set_error (error,
		       GTK_FILE_CHOOSER_ERROR,
		       GTK_FILE_CHOOSER_ERROR_NONEXISTENT,
		       "Could not get parent file");
      g_set_error (error,
		   GTK_FILE_CHOOSER_ERROR,
		   GTK_FILE_CHOOSER_ERROR_ALREADY_EXISTS,
		   "%s already exists in the bookmarks list",
		   uri);
      g_set_error (error,
		   GTK_FILE_CHOOSER_ERROR,
		   GTK_FILE_CHOOSER_ERROR_NONEXISTENT,
		   "%s does not exist in the bookmarks list",
		   uri);

Shouldn't these strings be i18n'd like all the other error strings in gtk+?
Comment 1 Christian Dywan 2009-09-01 15:02:32 UTC
Created attachment 142251 [details] [review]
Localize strings in GtkFilesystem
Comment 2 Christian Dywan 2010-06-16 11:05:07 UTC
Created attachment 163801 [details] [review]
Localize error strings in GtkFilesystem
Comment 3 Timothy Arceri 2013-05-28 08:02:46 UTC
Created attachment 245434 [details] [review]
Refactor-duplicate-set-error-code-and-localise-error-strings

This patch refactors duplicate set error code and localise error messages in bookmark manager
Comment 4 Timothy Arceri 2013-05-28 09:18:02 UTC
Created attachment 245439 [details] [review]
Refactor-duplicate-set-error-code-and-localise-error-strings

This patch removes unrelated code that shouldn't have been in the previous patch
Comment 5 Timothy Arceri 2013-05-30 07:10:22 UTC
By the way I cannot find the other two strings in current gtk so feel free to close the bug if my patch is accepted.
Comment 6 Federico Mena Quintero 2013-05-30 15:46:21 UTC
Nice one!  Thanks; I pushed it to master as 44cd166.