GtkBookmarksManager: Refactor duplicate set error code and localise error strings

https://bugzilla.gnome.org/show_bug.cgi?id=593079